<resources>
    <string name="app_name"></string>
    <string name="lis_ruoka">Lisää ruoka</string>
    <string name="lis_paino">Lisää paino</string>
    <string name="lis_liikunta">Lisää liikunta</string>
    <string name="seuranta">Seuranta</string>
    <string name="kalorilaskuri">Kalorilaskuri</string>
    <string name="lisaa">Lisää</string>
    <string name="sy_t_ruuan_kalorit">Syötä ruuan kalorit</string>
    <string name="kalorit_yhteens">Kalorit yhteensä</string>
    <string name="_0">0</string>
    <string name="lis_uusi_paino">Lisää uusi paino</string>
    <string name="health_hub">Health Hub</string>
    <string name="sinun_hyvinvointisi_tueksi">- Sinun hyvinvointisi tueksi -</string>
    <string name="omat_tiedot">omat tiedot</string>
    <string name="p_iv_kohtaiset_tavoitteet">Päiväkohtaiset tavoitteet</string>
    <string name="paino">Paino</string>
    <string name="pituus">Pituus</string>
    <string name="kaloritavoite">Kaloritavoite</string>
    <string name="poltetut_kalorit">Poltetut kalorit</string>
    <string name="lis_liikuntasuoritus">lisää liikuntasuoritus</string>
    <string name="lis_uusi_liikuntasuoritus">Lisää uusi liikuntasuoritus</string>
    <string name="lis">Lisää</string>
    <string name="todo">TODO</string>
    <string name="omat_tiedot1">Omat tiedot</string>
    <string name="paino_kg">Paino (kg)</string>
    <string name="pituus_cm">Pituus (cm)</string>
    <string name="kaloritavoite_ruualle">Kaloritavoite ruualle</string>

    <string-array name="liikuntamuodot">
        <item>Juoksu (puoli tuntia) 300 kcal</item>
        <item>Juoksu (tunti) 600 kcal</item>
        <item>Uinti (puoli tuntia) 250 kcal</item>
        <item>Pyöräily (puoli tuntia) 110 kcal</item>
        <item>Muu</item>
    </string-array>

</resources>