<?xml version="1.0" encoding="utf-8"?>
<!--@author Henri Vuento, Tuomo Muttonen, Suvi Laitinen
 @version 11.12.2021-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCEDF4"
    tools:context=".UserSettings">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/adamina"
        android:text="@string/omat_tiedot1"
        android:textAlignment="center"
        android:textColor="#040404"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="140dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/pituus_cm"
        android:textColor="#070707"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/et_height"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="100dp"
        android:layout_height="29dp"
        android:layout_marginStart="41dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/paino_kg"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toStartOf="@+id/et_weight"
        app:layout_constraintHorizontal_bias="0.252"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.358" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adamina"
        android:text="@string/p_iv_kohtaiset_tavoitteet"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/kaloritavoite_ruualle"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_food_goal"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_food_goal" />

    <EditText
        android:id="@+id/et_height"
        android:layout_width="152dp"
        android:layout_height="59dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="#070707"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_weight"
        android:layout_width="152dp"
        android:layout_height="59dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="#070707"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_food_goal"
        android:layout_width="152dp"
        android:layout_height="59dp"
        android:layout_marginTop="67dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="#070707"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>