<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCEDF4"
    tools:context=".Food">

    <TextView
        android:id="@+id/textView"
        android:layout_width="172dp"
        android:layout_height="42dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/adamina"
        android:text="@string/kalorilaskuri"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="237dp"
        android:layout_height="48dp"
        android:layout_marginTop="68dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/sy_t_ruuan_kalorit"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTxFoodCalories"
        android:layout_width="210dp"
        android:layout_height="68dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="#090909"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/bt_add_food_calories"
        android:layout_width="104dp"
        android:layout_height="57dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#274E29"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="updateFoodCalories"
        android:text="@string/lis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toEndOf="@+id/editTxFoodCalories"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ProgressBar
        android:id="@+id/food_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="48dp"
        android:background="#FFFFFF"
        android:progressBackgroundTint="#888484"
        android:progressTint="#32B637"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="170dp"
        android:layout_height="47dp"
        android:layout_marginTop="204dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/kalorit_yhteens"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textColorHighlight="#ECDEDE"
        android:textColorHint="#C5ADAD"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/total_food_calories"
        android:layout_width="411dp"
        android:layout_height="44dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="213dp"
        android:layout_height="27dp"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="Päivittäinen tavoite"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_food_calories" />

    <TextView
        android:id="@+id/food_calories_goal"
        android:layout_width="418dp"
        android:layout_height="59dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="Ei asetettu"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.166" />


</androidx.constraintlayout.widget.ConstraintLayout>